Lid_driven_cavity_analytic/high/jitfailure-dolfin_expression_104532ba24fdcf8597d818cf0a23a276/error.log
/tmp/tmprjrg3cxd/dolfin_expression_104532ba24fdcf8597d818cf0a23a276.cpp: In member function ‘virtual void dolfin::dolfin_expression_104532ba24fdcf8597d818cf0a23a276::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmprjrg3cxd/dolfin_expression_104532ba24fdcf8597d818cf0a23a276.cpp:65:42: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = u_top/nu*8*((x[0]**4-2*x[0]**3+x[0]**2));
                                          ^
/tmp/tmprjrg3cxd/dolfin_expression_104532ba24fdcf8597d818cf0a23a276.cpp:65:52: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = u_top/nu*8*((x[0]**4-2*x[0]**3+x[0]**2));
                                                    ^
/tmp/tmprjrg3cxd/dolfin_expression_104532ba24fdcf8597d818cf0a23a276.cpp:65:60: error: invalid type argument of unary ‘*’ (have ‘int’)
           values[0] = u_top/nu*8*((x[0]**4-2*x[0]**3+x[0]**2));
                                                            ^
